styling class personal

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 .personal{
     line-height:200%;
-    font-size:20px;
+    font: size 25;px;
     float: right;
     padding: 170px;
     margin: 20px;
